samples/_failures_safe/1761365518_b87cb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a22ea3e.c: In function ‘main’:
./samples/SAFE/__tmp_9a22ea3e.c:162:13: error: expected declaration or statement at end of input
  162 |             case 3:
      |             ^~~~
./samples/SAFE/__tmp_9a22ea3e.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a22ea3e.c:162:13: error: expected declaration or statement at end of input
